[package]
name = "zengin"
version = "1.1.1"
edition = "2021"
description = "The Rust library for Zengin Code."
keywords = [ "zengin", "bank" ]
categories = [ "finance" ]
license = "MIT"
authors = ["Hiroyuki Fudaba <delihiros@gmail.com>"]
readme = "README.md"

documentation = "https://docs.rs/zengin/"
homepage = "https://github.com/zengin-code/zengin-rs"
repository = "https://github.com/zengin-code/zengin-rs"



[dependencies]
include_dir = "0.7.4"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[lib]
doctest = false
